js functions done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
     </div>
 </header>
 
+<section id="#dashboard">
+<!--    <div class="dashboard-main-frame">-->
+<!--        <div class="dash-sub">-->
+<!--            Customers-->
+<!--            <label>No</label>-->
+<!--        </div>-->
+<!--        <div class="dash-sub">-->
+<!--            Items-->
+<!--            <label>No</label>-->
+<!--        </div>-->
+<!--        <div class="dash-sub">-->
+<!--            Orders-->
+<!--            <label>No</label>-->
+<!--        </div>-->
+<!--    </div>-->
+</section>
+
 <section id="customer">
     <div class="cus-topic">
         <h3>Customer Manage</h3>
@@ -88,30 +105,6 @@
             </tr>
             </thead>
             <tbody class="customer-table-body">
-            <tr>
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-            </tr>
-            <tr>
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-            </tr>
-            <tr>
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-            </tr>
-            <tr>
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-<!--                <td>Hirusha</td>-->
-            </tr>
             </tbody>
         </table>
     </div>
