--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hirusha Pos</title>
     <link rel="stylesheet" href="/styles1.css">
+    <link rel="stylesheet" href="/mediaqueries.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 
